    the bandwidth for this smoothing operation can no longer be set in order to provide general 
    setting for the adaptation parameter in fmri.smooth()
  - The adaptation parameters have been re-tuned for most of the statistical kernels in fmri.smooth().
    This was missing in former version. It could have lead to adaptation to noise and thus signal detection 
    with many false positives.

2008-05-06 version 1.2-6

  - new function cut.roi()
  - plot.fmridata() is now able to produce anatomical overlay for pvalue data for AFNI, and NIFTI data
  - read.AFNI() should be able to interpret filenames more flexible: with, without 
    extensions, with dots in name.

2008-01-21 version 1.2-5

  - read.AFNI() can read BRICK_TYPES 3 and 5 now. Beware: all sub-bricks are assumed to have 
    the same BRICK_TYPE
  - bugfix in write.AFNI() for writing BRICKTYPES 3 (float) and 5 (complex)
  - bugfix for numbered ANALYZE files in read.ANALYZE() which lead to reading only one file.
  - set level for mask in all read functions as argument. reset data to zero only 
    for NA values not for !mask
  - bugfix for SQ in read.DICOM which caused incorrect reading of data sequences
    of unknown length
  - dimension setting bugfix in read.ANALYZE()
  - several corrections for ngca, 
  - function ngca now works for matrix- and fmridata-objects
  - new fastICA function for fmri (fmriica)
  - fmriica allows to restrict data cube by arguments xind, yind, zind and tind

2007-12-07 version 1.2-4

  - if dataset contains NA, set mask at these voxels to FALSE, set data to zero.
  - to determine the (head) mask the quantile function in all read functions 
    has na.rm = TRUE now. This avoids error for datasets with NaN in datacube.

2007-11-12 version 1.2-3

  - read.AFNI() has a new argument 'vol' which contains a vector of 
    volumes to be read. This hopefully enables to read parts of large datastes 
    without running into memory problems.